# agentops-control-plane

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  SECURITY.md  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: final-review-fix-report.md  task-5-report.md  task-6-report.md  task-7-report.md
agentops_control_plane/: __init__.py  agents.py  audit.py  claude_code_adapter.py  cli.py  config.py  evaluator.py  exporter.py  gateway.py  mcp_adapter.py  mcp_stdio.py  models.py  policy.py  tools.py  web.py  workspace.py
agentpermit/: __init__.py  agents.py  audit.py  claude_code_adapter.py  cli.py  config.py  evaluator.py  exporter.py  gateway.py  mcp_adapter.py  mcp_stdio.py  models.py  policy.py  redaction.py  snapshot_diff.py  tools.py  web.py  workspace.py
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  MCP_STDIO.md
docs/superpowers/plans/: 2026-07-13-agentpermit-v0.3.md
docs/superpowers/specs/: 2026-07-13-agentpermit-v0.3-design.md
examples/: mcp_tool_plan.json  policy.json  scripted_fix_agent.json  tasks.jsonl
examples/sample_repo/: test_math_utils.py
scripts/: publish_npm.mjs  smoke_npm_artifact.mjs  validate_release.py
tests/: launcher.test.js  publish.test.mjs  test_agents.py  test_approval_security.py  test_claude_code_adapter.py  test_cli.py  test_command_execution.py  test_exporter.py  test_final_review_fixes.py  test_gateway.py  test_mcp_adapter.py  test_mcp_stdio.py  test_policy.py  test_rebrand.py  test_redaction.py  test_release_validation.py  test_web.py  test_workflows.py  version.test.js
