[project]
name = "agentops-control-plane"
version = "0.1.0"
description = "Vendor-neutral control plane for governed AI agent tool execution"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "AgentOps Control Plane"}]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
agentops = "agentops_control_plane.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentops_control_plane"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

