[project]
name = "agentpermit"
version = "0.2.0"
description = "Vendor-neutral control plane for governed AI agent tool execution"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "AgentPermit"}]
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "pytest>=8.0.0",
]

[project.scripts]
agentpermit = "agentpermit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentpermit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

